<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="action_new_tweet">New Tweet</string>
    <string name="user_name">User Name</string>
    <string name="user_id">User Id</string>
    <string name="body_text">Body Text</string>
    <string name="created_at">Created at</string>
    <string name="close">Close</string>
    <string name="whats_happening">"What's happening?"</string>
    <string name="tweet">"TWEET"</string>
    <string name="text_count">"0"</string>
    <string name="followers">"15 followers"</string>
    <string name="following">"42 following"</string>


</resources>